# solana_monitor

./: .env  Cargo.toml  Dockerfile
doc/: asyncAPI.yaml  config.md
openspec/: project.md
openspec/changes/add-core-monitoring/: proposal.md  tasks.md
openspec/changes/add-core-monitoring/specs/monitoring/: spec.md
src/: analyzer.rs  config.rs  helius.rs  main.rs  moralis.rs  telegram.rs
